--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "guesslang-js": "^0.0.3",
     "postcss": "^8.4.48",
     "rehype-pretty-code": "^0.14.0",
     "rehype-stringify": "^10.0.1",
